[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "giantrobustdisassembly"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
"discord.py" = "^1.3"
praw = "^7.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
